fix rating not showing

--- a/client/templates/product/product.css
+++ b/client/templates/product/product.css
@@ -1,3 +1,7 @@
 .fa.fa-star {
-    font-size: 50%;
+    font-size: 60%;
+}
+
+.price-text-color {
+    color: goldenrod;
 }
